--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-switch": "^7.0.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
